--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dms-coordinates = "1.1.0"
 geo-types = "0.7.8"
 geocoding = "0.4.0"
