--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+arboard = "3.2.0"
 dms-coordinates = "1.1.0"
 eframe = "0.21.3"
 geo-types = "0.7.8"
