--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,23 +9,9 @@ author = ["Hugo Berthet-Rambaud <hugoberthetrambaud@outlook.com>"]
 [dependencies]
 eframe = "0.21.3"
 geo-types = "0.7.8"
-geocoding = { git = 'https://github.com/hugo-b-r/geocoding' }
-
-[dependencies.chrono]
-version = "0.4.23"
-default-features = false
-features = ["wasmbind", "js-sys"]
-
-#native
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-
 arboard = "3.2.0"
+geocoding = "0.4.0"
 
-#web
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-console_error_panic_hook = "0.1.6"
-tracing-wasm = "0.2"
-wasm-bindgen-futures = "0.4"
 
 [profile.release]
 opt-level = 2
