--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "A simple tool to get coordinates for the making of a flight plan.
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe = "0.21.3"
+eframe = { version = "0.28.1", features = [ "wayland"]}
 geo-types = "0.7.8"
 arboard = "3.2.0"
 geocoding = "0.4.0"
